# piopls

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
examples/: benchmark.ipynb  equivalence_benchmark.ipynb  quickstart_en.ipynb  quickstart_zh.ipynb  tutorial.py
src/piopls/: __init__.py  datasets.py  oplsda_models.py  oplsda_plotting.py
src/piopls/data/: sacurine_X.csv  sacurine_Y.csv
tests/: test_oplsda.py  test_ropls_equivalence.py
