[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piopls"
version = "0.1.1"
authors = [
    { name="XuKaikun", email="xukaikun.bio@qq.com" },
]
description = "A high-performance Python package for OPLS-DA, strictly aligned with the 'ropls' algorithm, featuring parallel permutation tests and publication-ready visualizations."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Metabolomics"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.2",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "ipywidgets>=8.0.0"
]

[project.urls]
"Homepage" = "https://github.com/KaikunXu/piopls"
"Bug Tracker" = "https://github.com/KaikunXu/piopls/issues"

[tool.setuptools.package-data]
"piopls.data" = ["*.csv"]