[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-oplsda"
dynamic = ["version", "readme"]
authors = [
    { name="KaikunXu", email="xukaikun.bio@qq.com" },
]
description = "A high-performance and user-friendly Python package for OPLS-DA, aligned with 'ropls'. Features parallel permutation tests with dynamic progress tracking, and publication-ready visualizations."
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Metabolomics"
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.2",
    "joblib>=1.3.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "patchworklib>=0.6.2",
    "plotnine>=0.10.1"
]

[project.urls]
"Homepage" = "https://github.com/KaikunXu/pi-oplsda"
"Bug Tracker" = "https://github.com/KaikunXu/pi-oplsda/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["piopls*"]

[tool.setuptools.package-data]
"piopls.data" = ["*.csv"]

[tool.setuptools.dynamic]
version = {attr = "piopls.__version__"}
readme = {file = ["README.md"]}

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "tabulate>=0.10.0"
]